project/django-notes-app/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-app-deployment
  namespace: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes-app

  template:
    metadata:
      name: notes-app-dep-pod
      labels:
        app: notes-app

    spec:
      containers:
      - name: app-notes
        image: avisharma82/notes-app1:latest
        ports:
        - containerPort: 8000
